dCamTorumMiner 1.1